<resources>
    <string name="app_name">Re-mind-er</string>
    <string name="task_title_label">What?</string>
    <string name="task_date_label">When?</string>
    <string name="task_priority_label">How important?</string>
    <string name="task_priority_high_option">High</string>
    <string name="task_priority_medium_option">Medium</string>
    <string name="task_priority_low_option">Low</string>
    <string name="task_done_label">Done?</string>
    <string name="task_done_yes">Yes</string>
    <string name="task_done_no">No</string>
    <string name="new_task">New Task</string>
    <string name="show_completed">Show Completed</string>
    <string name="hide_completed">Hide Completed</string>
    <string name="delete_tasks">Delete Completed Tasks</string>
    <string name="test_tasks">Dev(Create Test Tasks)</string>
    <string name="test_delete_tasks">Dev(Delete All Tasks)</string>
    <string name="delete_task">Delete</string>
    <string name="show_notification">Pin Task</string>
    <string name="priority_tab_content">Priority Tab</string>
    <string name="date_tab_content">Date Tab</string>
    <string name="snackbar_text">Task Deleted</string>
    <string name="snackbar_action">Cancel</string>
    <string name="empty_text">"Error 404: Tasks not Found\nPress '+' to add a new Task!"</string>
</resources>
